fix for link preview list on small screens

--- a/MegaUltraTweet/app/assets/stylesheets/_flexbox.scss
+++ b/MegaUltraTweet/app/assets/stylesheets/_flexbox.scss
@@ -62,9 +62,9 @@
 }
 
 .flex-item-link {
-  @include flex(4 1 300px);
+  @include flex(4 1 250px);
   max-width: 800px;
-  min-width: 300px;
+  min-width: 250px;
   //  flex-basis: 350px;
   //  flex-shrink: 1;
   //  flex-grow: 3;
